[Mac] Test for Security State Bubble Decoration

- Wrote unit tests for the decoration
- Fixed the issues found from the tests

BUG=687347

Review-Url: https://codereview.chromium.org/2700243002
Cr-Commit-Position: refs/heads/master@{#452863}

Former-commit-id: 0153b22ba239a1b863b80a39d1c163c5e6a983e0